--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
             "gsap": "^3.14.2",
             "input-otp": "^1.4.2",
             "lucide-react": "^0.487.0",
+            "motion": "^12.23.26",
             "next-themes": "^0.4.6",
             "react": "^18.3.1",
             "react-day-picker": "^8.10.1",
